# VideoApp

./: README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.h
app/src/main/cpp/bridge/: ffmpeg_jni_bridge.cpp
app/src/main/cpp/fftools/: config.h  config_components.h  ffmpeg_dec.c  ffmpeg_demux.c  ffmpeg_enc.c  ffmpeg_entry.c  ffmpeg_entry.h  ffmpeg_filter.c  ffmpeg_hw.c  ffmpeg_mux.c  ffmpeg_mux_init.c  ffmpeg_opt.c
app/src/main/cpp/include/: config.h
app/src/main/java/com/example/videoapp/: App.kt  Permisson.kt  ViedoAPP.kt
app/src/main/java/com/example/videoapp/pages/: EditPage.kt  EditVideoPage.kt  MainPage.kt  PageNavigate.kt
app/src/main/java/com/example/videoapp/ui/components/: Menu.kt  VideoPlayer.kt
app/src/main/java/com/example/videoapp/ui/pages/: EditVideoPage.kt  MainPage.kt  PageNavigate.kt
app/src/main/java/com/example/videoapp/uilts/: FFmepe.kt  FFmpeg.kt  StorageLoad.kt  Uilts.kt  VideoPlayer.kt
app/src/main/java/com/example/videoapp/utils/: AppUtil.kt  FFmpeg.kt  FileResolver.kt  Permisson.kt
app/src/main/java/com/example/videoapp/viewmodel/: VideoResolveViewModel.kt
app/src/main/jniLibs/arm64-v8a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavformat.pc  libswresample.pc
app/src/main/jnilibs/arm64-v8a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
